[package]
name = "vizsla"
version = "0.1.0"
authors = ["Davis Van Sant <davisvansant@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = { version = "1.0.20", default-features = false, features = [ "rust_backend" ] }
tar = "0.4.35"
